force-app/main/default/objects/User/fields/Ameyo_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Ameyo_Agent_Id__c</fullName>
    <label>Ameyo Agent Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>