force-app/main/default/objects/User/fields/Backup_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Backup_Campaign__c</fullName>
    <label>Backup Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>