force-app/main/default/objects/User/fields/Count_of_month__c.field-meta.xml
<CustomField>
    <fullName>Count_of_month__c</fullName>
    <formula>(YEAR(TODAY()) - YEAR(Date_of_Joining__c)) * 12 + (MONTH(TODAY()) - MONTH(Date_of_Joining__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>