force-app/main/default/objects/User/fields/CP_Mandate__c.field-meta.xml
<CustomField>
    <fullName>CP_Mandate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP Mandate</label>
    <type>Checkbox</type>
</CustomField>