force-app/main/default/objects/User/fields/CTI_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>CTI_Agent_ID__c</fullName>
    <label>CTI Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>