force-app/main/default/objects/User/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>TL</fullName>
            </value>
            <value>
                <fullName>Market Head</fullName>
            </value>
            <value>
                <fullName>Closing Head</fullName>
            </value>
            <value>
                <fullName>Sourcing Head</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>MKTG</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>HL</fullName>
            </value>
            <value>
                <fullName>Sales Strategy</fullName>
            </value>
            <value>
                <fullName>IT Team</fullName>
            </value>
            <value>
                <fullName>Senior Account Executive</fullName>
            </value>
            <value>
                <fullName>Sales CP Billing Team ( MIS )</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Senior Executive</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Sr. Executive Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>