force-app/main/default/objects/User/fields/DID__c.field-meta.xml
<CustomField>
    <fullName>DID__c</fullName>
    <label>DID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>