force-app/main/default/objects/User/fields/Feedback_Team__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Team__c</fullName>
    <label>NPS Feedback Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Gardens</fullName>
            </value>
            <value>
                <fullName>MyCity</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Dombivli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>