force-app/main/default/objects/User/fields/International_Campaign__c.field-meta.xml
<CustomField>
    <fullName>International_Campaign__c</fullName>
    <label>International Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>