force-app/main/default/objects/User/fields/International_DID__c.field-meta.xml
<CustomField>
    <fullName>International_DID__c</fullName>
    <label>International DID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>