force-app/main/default/objects/User/fields/Locobuzz_Default_User__c.field-meta.xml
<CustomField>
    <fullName>Locobuzz_Default_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locobuzz Default User</label>
    <type>Checkbox</type>
</CustomField>