force-app/main/default/objects/User/fields/NPS_Feedback_Team__c.field-meta.xml
<CustomField>
    <fullName>NPS_Feedback_Team__c</fullName>
    <label>NPS Feedback Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>FM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>