force-app/main/default/objects/User/fields/Offline_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Offline_Agent_Name__c</fullName>
    <label>Offline Agent Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>