force-app/main/default/objects/User/fields/Offline_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Offline_Campaign_Name__c</fullName>
    <label>Offline Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>