force-app/main/default/objects/User/fields/old_role__c.field-meta.xml
<CustomField>
    <fullName>old_role__c</fullName>
    <label>old role</label>
    <length>200</length>
    <type>Text</type>
</CustomField>