force-app/main/default/objects/User/fields/Ozontel_UserName__c.field-meta.xml
<CustomField>
    <fullName>Ozontel_UserName__c</fullName>
    <label>Ozontel UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>