force-app/main/default/objects/User/fields/Project_Market__c.field-meta.xml
<CustomField>
    <fullName>Project_Market__c</fullName>
    <label>Project / Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Project</fullName>
            </value>
            <value>
                <fullName>Mumbai Project</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>R-Avenue</fullName>
            </value>
            <value>
                <fullName>R-Bliss</fullName>
            </value>
            <value>
                <fullName>R-Bliss &amp; Avenue</fullName>
            </value>
            <value>
                <fullName>R-Forest</fullName>
            </value>
            <value>
                <fullName>R-Gardens</fullName>
            </value>
            <value>
                <fullName>R - Mahalaxmi</fullName>
            </value>
            <value>
                <fullName>R-MyCity</fullName>
            </value>
            <value>
                <fullName>R-Pinnacle</fullName>
            </value>
            <value>
                <fullName>R-Pinnacle &amp; Greens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>