force-app/main/default/objects/User/fields/Reason_for_deactivation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_deactivation__c</fullName>
    <label>Reason for deactivation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>Non usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>