force-app/main/default/objects/User/fields/RW_Accountid__c.field-meta.xml
<CustomField>
    <fullName>RW_Accountid__c</fullName>
    <label>AccountId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>