force-app/main/default/objects/User/fields/Schedule_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Campaign_Name__c</fullName>
    <label>Schedule Campaign Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>