force-app/main/default/objects/User/fields/Show_CP_Case_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Show_CP_Case_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show CP Case Dashboard</label>
    <type>Checkbox</type>
</CustomField>