force-app/main/default/objects/User/fields/Tata_CTI_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>Tata_CTI_Agent_Number__c</fullName>
    <label>Tata CTI Agent Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>