force-app/main/default/objects/User/fields/Transfer_Case__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Case__c</fullName>
    <formula>IF(!ISBLANK(old_role__c ),  true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Case</label>
    <type>Checkbox</type>
</CustomField>