force-app/main/default/objects/User/validationRules/Validate_Portal_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Portal_User</fullName>
    <active>true</active>
    <description>Cannot change the data, please contact your representative.</description>
    <errorConditionFormula>AND($Profile.Name == &quot;Community Login User Custm&quot;, !ISNEW())</errorConditionFormula>
    <errorMessage>Cannot change the data, please contact your representative.</errorMessage>
</ValidationRule>