force-app/main/default/objects/User/listViews/All_CP_Portal_Users.listView-meta.xml
<ListView>
    <fullName>All_CP_Portal_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Partner Community User</value>
    </filters>
    <label>All CP Portal Users</label>
</ListView>