force-app/main/default/objects/User/listViews/Frozen_users_list.listView-meta.xml
<ListView>
    <fullName>Frozen_users_list</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_FROZEN</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Frozen users list</label>
</ListView>